sdk/appcontainers/arm-appcontainers/samples/v2/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                         | **Description**                                                                                                                                                                                                                         |
| --------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [availableWorkloadProfilesGetSample.ts][availableworkloadprofilesgetsample]                                           | Get all available workload profiles for a location. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AvailableWorkloadProfiles_Get.json                                                  |
| [billingMetersGetSample.ts][billingmetersgetsample]                                                                   | Get all billingMeters for a location. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/BillingMeters_Get.json                                                                            |
| [certificatesCreateOrUpdateSample.ts][certificatescreateorupdatesample]                                               | Create or Update a Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_CreateOrUpdate.json                                                                         |
| [certificatesDeleteSample.ts][certificatesdeletesample]                                                               | Deletes the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_Delete.json                                                                              |
| [certificatesGetSample.ts][certificatesgetsample]                                                                     | Get the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificate_Get.json                                                                                     |
| [certificatesListSample.ts][certificateslistsample]                                                                   | Get the Certificates in a given managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_ListByManagedEnvironment.json                                         |
| [certificatesUpdateSample.ts][certificatesupdatesample]                                                               | Patches a certificate. Currently only patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_Patch.json                                             |
| [connectedEnvironmentsCertificatesCreateOrUpdateSample.ts][connectedenvironmentscertificatescreateorupdatesample]     | Create or Update a Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_CreateOrUpdate.json                                                    |
| [connectedEnvironmentsCertificatesDeleteSample.ts][connectedenvironmentscertificatesdeletesample]                     | Deletes the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_Delete.json                                                         |
| [connectedEnvironmentsCertificatesGetSample.ts][connectedenvironmentscertificatesgetsample]                           | Get the specified Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificate_Get.json                                                                |
| [connectedEnvironmentsCertificatesListSample.ts][connectedenvironmentscertificateslistsample]                         | Get the Certificates in a given connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_ListByConnectedEnvironment.json                |
| [connectedEnvironmentsCertificatesUpdateSample.ts][connectedenvironmentscertificatesupdatesample]                     | Patches a certificate. Currently only patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_Patch.json                        |
| [connectedEnvironmentsCheckNameAvailabilitySample.ts][connectedenvironmentschecknameavailabilitysample]               | Checks if resource connectedEnvironmentName is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsCertificates_CheckNameAvailability.json                  |
| [connectedEnvironmentsCreateOrUpdateSample.ts][connectedenvironmentscreateorupdatesample]                             | Creates or updates an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_CreateOrUpdate.json                                                   |
| [connectedEnvironmentsDaprComponentsCreateOrUpdateSample.ts][connectedenvironmentsdaprcomponentscreateorupdatesample] | Creates or updates a Dapr Component in a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json                 |
| [connectedEnvironmentsDaprComponentsDeleteSample.ts][connectedenvironmentsdaprcomponentsdeletesample]                 | Delete a Dapr Component from a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_Delete.json                                   |
| [connectedEnvironmentsDaprComponentsGetSample.ts][connectedenvironmentsdaprcomponentsgetsample]                       | Get a dapr component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_Get.json                                                                      |
| [connectedEnvironmentsDaprComponentsListSample.ts][connectedenvironmentsdaprcomponentslistsample]                     | Get the Dapr Components for a connected environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_List.json                                      |
| [connectedEnvironmentsDaprComponentsListSecretsSample.ts][connectedenvironmentsdaprcomponentslistsecretssample]       | List secrets for a dapr component x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsDaprComponents_ListSecrets.json                                                  |
| [connectedEnvironmentsDeleteSample.ts][connectedenvironmentsdeletesample]                                             | Delete an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Delete.json                                                                       |
| [connectedEnvironmentsGetSample.ts][connectedenvironmentsgetsample]                                                   | Get the properties of an connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Get.json                                                           |
| [connectedEnvironmentsListByResourceGroupSample.ts][connectedenvironmentslistbyresourcegroupsample]                   | Get all connectedEnvironments in a resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_ListByResourceGroup.json                                       |
| [connectedEnvironmentsListBySubscriptionSample.ts][connectedenvironmentslistbysubscriptionsample]                     | Get all connectedEnvironments for a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_ListBySubscription.json                                         |
| [connectedEnvironmentsStoragesCreateOrUpdateSample.ts][connectedenvironmentsstoragescreateorupdatesample]             | Create or update storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_CreateOrUpdate.json                                  |
| [connectedEnvironmentsStoragesDeleteSample.ts][connectedenvironmentsstoragesdeletesample]                             | Delete storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_Delete.json                                                    |
| [connectedEnvironmentsStoragesGetSample.ts][connectedenvironmentsstoragesgetsample]                                   | Get storage for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_Get.json                                                          |
| [connectedEnvironmentsStoragesListSample.ts][connectedenvironmentsstorageslistsample]                                 | Get all storages for a connectedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironmentsStorages_List.json                                                    |
| [connectedEnvironmentsUpdateSample.ts][connectedenvironmentsupdatesample]                                             | Patches a Managed Environment. Only patching of tags is supported currently x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ConnectedEnvironments_Patch.json                            |
| [containerAppsAuthConfigsCreateOrUpdateSample.ts][containerappsauthconfigscreateorupdatesample]                       | Create or update the AuthConfig for a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_CreateOrUpdate.json                                                    |
| [containerAppsAuthConfigsDeleteSample.ts][containerappsauthconfigsdeletesample]                                       | Delete a Container App AuthConfig. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_Delete.json                                                                              |
| [containerAppsAuthConfigsGetSample.ts][containerappsauthconfigsgetsample]                                             | Get a AuthConfig of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_Get.json                                                                               |
| [containerAppsAuthConfigsListByContainerAppSample.ts][containerappsauthconfigslistbycontainerappsample]               | Get the Container App AuthConfigs in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/AuthConfigs_ListByContainer.json                                           |
| [containerAppsCreateOrUpdateSample.ts][containerappscreateorupdatesample]                                             | Create or update a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_CreateOrUpdate.json                                                                     |
| [containerAppsDeleteSample.ts][containerappsdeletesample]                                                             | Delete a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Delete.json                                                                                       |
| [containerAppsDiagnosticsGetDetectorSample.ts][containerappsdiagnosticsgetdetectorsample]                             | Get a diagnostics result of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerAppsDiagnostics_Get.json                                                          |
| [containerAppsDiagnosticsGetRevisionSample.ts][containerappsdiagnosticsgetrevisionsample]                             | Get a revision of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Get.json                                                                                   |
| [containerAppsDiagnosticsGetRootSample.ts][containerappsdiagnosticsgetrootsample]                                     | Get the properties of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Get.json                                                                           |
| [containerAppsDiagnosticsListDetectorsSample.ts][containerappsdiagnosticslistdetectorssample]                         | Get the list of diagnostics for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerAppsDiagnostics_List.json                                               |
| [containerAppsDiagnosticsListRevisionsSample.ts][containerappsdiagnosticslistrevisionssample]                         | Get the Revisions for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_List.json                                                                        |
| [containerAppsGetAuthTokenSample.ts][containerappsgetauthtokensample]                                                 | Get auth token for a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_GetAuthToken.json                                                                      |
| [containerAppsGetSample.ts][containerappsgetsample]                                                                   | Get the properties of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Get.json                                                                           |
| [containerAppsListByResourceGroupSample.ts][containerappslistbyresourcegroupsample]                                   | Get the Container Apps in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListByResourceGroup.json                                                |
| [containerAppsListBySubscriptionSample.ts][containerappslistbysubscriptionsample]                                     | Get the Container Apps in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListBySubscription.json                                                   |
| [containerAppsListCustomHostNameAnalysisSample.ts][containerappslistcustomhostnameanalysissample]                     | Analyzes a custom hostname for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListCustomHostNameAnalysis.json                                            |
| [containerAppsListSecretsSample.ts][containerappslistsecretssample]                                                   | List secrets for a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_ListSecrets.json                                                                         |
| [containerAppsRevisionReplicasGetReplicaSample.ts][containerappsrevisionreplicasgetreplicasample]                     | Get a replica for a Container App Revision. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Replicas_Get.json                                                                           |
| [containerAppsRevisionReplicasListReplicasSample.ts][containerappsrevisionreplicaslistreplicassample]                 | List replicas for a Container App Revision. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Replicas_List.json                                                                          |
| [containerAppsRevisionsActivateRevisionSample.ts][containerappsrevisionsactivaterevisionsample]                       | Activates a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Activate.json                                                                        |
| [containerAppsRevisionsDeactivateRevisionSample.ts][containerappsrevisionsdeactivaterevisionsample]                   | Deactivates a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Deactivate.json                                                                    |
| [containerAppsRevisionsGetRevisionSample.ts][containerappsrevisionsgetrevisionsample]                                 | Get a revision of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Get.json                                                                                   |
| [containerAppsRevisionsListRevisionsSample.ts][containerappsrevisionslistrevisionssample]                             | Get the Revisions for a given Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_List.json                                                                        |
| [containerAppsRevisionsRestartRevisionSample.ts][containerappsrevisionsrestartrevisionsample]                         | Restarts a revision for a Container App x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Revisions_Restart.json                                                                          |
| [containerAppsSessionPoolsCreateOrUpdateSample.ts][containerappssessionpoolscreateorupdatesample]                     | Create or update a session pool with the given properties. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_LifecycleOnContainerExit_CreateOrUpdate.json                    |
| [containerAppsSessionPoolsDeleteSample.ts][containerappssessionpoolsdeletesample]                                     | Delete the session pool with the given name. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Delete.json                                                                   |
| [containerAppsSessionPoolsGetSample.ts][containerappssessionpoolsgetsample]                                           | Get the properties of a session pool. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Get.json                                                                             |
| [containerAppsSessionPoolsListByResourceGroupSample.ts][containerappssessionpoolslistbyresourcegroupsample]           | Get the session pools in a given resource group of a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_ListByResourceGroup.json                                |
| [containerAppsSessionPoolsListBySubscriptionSample.ts][containerappssessionpoolslistbysubscriptionsample]             | Get the session pools in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_ListBySubscription.json                                                     |
| [containerAppsSessionPoolsUpdateSample.ts][containerappssessionpoolsupdatesample]                                     | Patches a session pool using JSON merge patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SessionPools_Patch.json                                                                   |
| [containerAppsSourceControlsCreateOrUpdateSample.ts][containerappssourcecontrolscreateorupdatesample]                 | Create or update the SourceControl for a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_CreateOrUpdate.json                                              |
| [containerAppsSourceControlsDeleteSample.ts][containerappssourcecontrolsdeletesample]                                 | Delete a Container App SourceControl. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_Delete.json                                                                        |
| [containerAppsSourceControlsGetSample.ts][containerappssourcecontrolsgetsample]                                       | Get a SourceControl of a Container App. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_Get.json                                                                         |
| [containerAppsSourceControlsListByContainerAppSample.ts][containerappssourcecontrolslistbycontainerappsample]         | Get the Container App SourceControls in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/SourceControls_ListByContainer.json                                     |
| [containerAppsStartSample.ts][containerappsstartsample]                                                               | Start a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Start.json                                                                                          |
| [containerAppsStopSample.ts][containerappsstopsample]                                                                 | Stop a container app x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Stop.json                                                                                            |
| [containerAppsUpdateSample.ts][containerappsupdatesample]                                                             | Patches a Container App using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ContainerApps_Patch.json                                                                 |
| [daprComponentsCreateOrUpdateSample.ts][daprcomponentscreateorupdatesample]                                           | Creates or updates a Dapr Component in a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_CreateOrUpdate_SecretStoreComponent.json                   |
| [daprComponentsDeleteSample.ts][daprcomponentsdeletesample]                                                           | Delete a Dapr Component from a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_Delete.json                                                          |
| [daprComponentsGetSample.ts][daprcomponentsgetsample]                                                                 | Get a dapr component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_Get_SecretStoreComponent.json                                                                      |
| [daprComponentsListSample.ts][daprcomponentslistsample]                                                               | Get the Dapr Components for a managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_List.json                                                             |
| [daprComponentsListSecretsSample.ts][daprcomponentslistsecretssample]                                                 | List secrets for a dapr component x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/DaprComponents_ListSecrets.json                                                                       |
| [getCustomDomainVerificationIdSample.ts][getcustomdomainverificationidsample]                                         | Get the verification id of a subscription used for verifying custom domains x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Subscriptions_GetCustomDomainVerificationId.json            |
| [javaComponentsCreateOrUpdateSample.ts][javacomponentscreateorupdatesample]                                           | Creates or updates a Java Component in a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_CreateOrUpdate.json                                        |
| [javaComponentsDeleteSample.ts][javacomponentsdeletesample]                                                           | Delete a Java Component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Delete.json                                                                                     |
| [javaComponentsGetSample.ts][javacomponentsgetsample]                                                                 | Get a Java Component. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Get.json                                                                                           |
| [javaComponentsListSample.ts][javacomponentslistsample]                                                               | Get the Java Components for a managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_List.json                                                             |
| [javaComponentsUpdateSample.ts][javacomponentsupdatesample]                                                           | Patches a Java Component using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/JavaComponents_Patch.json                                                               |
| [jobExecutionSample.ts][jobexecutionsample]                                                                           | Get details of a single job execution x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Execution_Get.json                                                                            |
| [jobsCreateOrUpdateSample.ts][jobscreateorupdatesample]                                                               | Create or Update a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_CreateorUpdate.json                                                                          |
| [jobsDeleteSample.ts][jobsdeletesample]                                                                               | Delete a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Delete.json                                                                                            |
| [jobsExecutionsListSample.ts][jobsexecutionslistsample]                                                               | Get a Container Apps Job's executions x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Executions_Get.json                                                                           |
| [jobsGetDetectorSample.ts][jobsgetdetectorsample]                                                                     | Get the diagnostics data for a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_GetDetector.json                                                                  |
| [jobsGetSample.ts][jobsgetsample]                                                                                     | Get the properties of a Container Apps Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Get.json                                                                                |
| [jobsListByResourceGroupSample.ts][jobslistbyresourcegroupsample]                                                     | Get the Container Apps Jobs in a given resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Jobs_ListByResourceGroup.json                                                    |
| [jobsListBySubscriptionSample.ts][jobslistbysubscriptionsample]                                                       | Get the Container Apps Jobs in a given subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Jobs_ListBySubscription.json                                                       |
| [jobsListDetectorsSample.ts][jobslistdetectorssample]                                                                 | Get the list of diagnostics for a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ListDetectors.json                                                             |
| [jobsListSecretsSample.ts][jobslistsecretssample]                                                                     | List secrets for a container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ListSecrets.json                                                                              |
| [jobsProxyGetSample.ts][jobsproxygetsample]                                                                           | Get the properties of a Container App Job. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_ProxyGet.json                                                                            |
| [jobsStartSample.ts][jobsstartsample]                                                                                 | Start a Container Apps Job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Start.json                                                                                               |
| [jobsStopExecutionSample.ts][jobsstopexecutionsample]                                                                 | Terminates execution of a running container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Stop_Execution.json                                                            |
| [jobsStopMultipleExecutionsSample.ts][jobsstopmultipleexecutionssample]                                               | Terminates execution of a running container apps job x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Stop_Multiple.json                                                             |
| [jobsUpdateSample.ts][jobsupdatesample]                                                                               | Patches a Container Apps Job using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Job_Patch.json                                                                      |
| [managedCertificatesCreateOrUpdateSample.ts][managedcertificatescreateorupdatesample]                                 | Create or Update a Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_CreateOrUpdate.json                                                          |
| [managedCertificatesDeleteSample.ts][managedcertificatesdeletesample]                                                 | Deletes the specified Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_Delete.json                                                               |
| [managedCertificatesGetSample.ts][managedcertificatesgetsample]                                                       | Get the specified Managed Certificate. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificate_Get.json                                                                      |
| [managedCertificatesListSample.ts][managedcertificateslistsample]                                                     | Get the Managed Certificates in a given managed environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificates_ListByManagedEnvironment.json                          |
| [managedCertificatesUpdateSample.ts][managedcertificatesupdatesample]                                                 | Patches a managed certificate. Oly patching of tags is supported x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedCertificates_Patch.json                                         |
| [managedEnvironmentDiagnosticsGetDetectorSample.ts][managedenvironmentdiagnosticsgetdetectorsample]                   | Get the diagnostics data for a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentDiagnostics_Get.json                  |
| [managedEnvironmentDiagnosticsListDetectorsSample.ts][managedenvironmentdiagnosticslistdetectorssample]               | Get the list of diagnostics for a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentDiagnostics_List.json              |
| [managedEnvironmentUsagesListSample.ts][managedenvironmentusageslistsample]                                           | Gets the current usage information as well as the limits for environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentUsages_List.json                            |
| [managedEnvironmentsCreateOrUpdateSample.ts][managedenvironmentscreateorupdatesample]                                 | Creates or updates a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_CustomInfrastructureResourceGroup_Create.json |
| [managedEnvironmentsDeleteSample.ts][managedenvironmentsdeletesample]                                                 | Delete a Managed Environment if it does not have any container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Delete.json                                    |
| [managedEnvironmentsDiagnosticsGetRootSample.ts][managedenvironmentsdiagnosticsgetrootsample]                         | Get the properties of a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Get.json                                   |
| [managedEnvironmentsGetAuthTokenSample.ts][managedenvironmentsgetauthtokensample]                                     | Checks if resource name is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_GetAuthToken.json                                                             |
| [managedEnvironmentsGetSample.ts][managedenvironmentsgetsample]                                                       | Get the properties of a Managed Environment used to host container apps. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Get.json                                   |
| [managedEnvironmentsListByResourceGroupSample.ts][managedenvironmentslistbyresourcegroupsample]                       | Get all the Managed Environments in a resource group. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListByResourceGroup.json                                      |
| [managedEnvironmentsListBySubscriptionSample.ts][managedenvironmentslistbysubscriptionsample]                         | Get all Managed Environments for a subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListBySubscription.json                                            |
| [managedEnvironmentsListWorkloadProfileStatesSample.ts][managedenvironmentslistworkloadprofilestatessample]           | Get all workload Profile States for a Managed Environment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_ListWorkloadProfileStates.json                           |
| [managedEnvironmentsStoragesCreateOrUpdateSample.ts][managedenvironmentsstoragescreateorupdatesample]                 | Create or update storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_CreateOrUpdate.json                                      |
| [managedEnvironmentsStoragesDeleteSample.ts][managedenvironmentsstoragesdeletesample]                                 | Delete storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_Delete.json                                                        |
| [managedEnvironmentsStoragesGetSample.ts][managedenvironmentsstoragesgetsample]                                       | Get storage for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_Get.json                                                              |
| [managedEnvironmentsStoragesListSample.ts][managedenvironmentsstorageslistsample]                                     | Get all storages for a managedEnvironment. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironmentsStorages_List.json                                                        |
| [managedEnvironmentsUpdateSample.ts][managedenvironmentsupdatesample]                                                 | Patches a Managed Environment using JSON Merge Patch x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/ManagedEnvironments_Patch.json                                                     |
| [namespacesCheckNameAvailabilitySample.ts][namespaceschecknameavailabilitysample]                                     | Checks if resource name is available. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Certificates_CheckNameAvailability.json                                                           |
| [operationsListSample.ts][operationslistsample]                                                                       | Lists all of the available RP operations. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Operations_List.json                                                                          |
| [usagesListSample.ts][usageslistsample]                                                                               | Gets, for the specified location, the current resource usage information as well as the limits under the subscription. x-ms-original-file: specification/app/resource-manager/Microsoft.App/stable/2025-01-01/examples/Usages_List.json |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/availableWorkloadProfilesGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env APPCONTAINERS_SUBSCRIPTION_ID="<appcontainers subscription id>" node dist/availableWorkloadProfilesGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableworkloadprofilesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/availableWorkloadProfilesGetSample.ts
[billingmetersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/billingMetersGetSample.ts
[certificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/certificatesCreateOrUpdateSample.ts
[certificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/certificatesDeleteSample.ts
[certificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/certificatesGetSample.ts
[certificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/certificatesListSample.ts
[certificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/certificatesUpdateSample.ts
[connectedenvironmentscertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCertificatesCreateOrUpdateSample.ts
[connectedenvironmentscertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCertificatesDeleteSample.ts
[connectedenvironmentscertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCertificatesGetSample.ts
[connectedenvironmentscertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCertificatesListSample.ts
[connectedenvironmentscertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCertificatesUpdateSample.ts
[connectedenvironmentschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCheckNameAvailabilitySample.ts
[connectedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsCreateOrUpdateSample.ts
[connectedenvironmentsdaprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDaprComponentsCreateOrUpdateSample.ts
[connectedenvironmentsdaprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDaprComponentsDeleteSample.ts
[connectedenvironmentsdaprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDaprComponentsGetSample.ts
[connectedenvironmentsdaprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDaprComponentsListSample.ts
[connectedenvironmentsdaprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDaprComponentsListSecretsSample.ts
[connectedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsDeleteSample.ts
[connectedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsGetSample.ts
[connectedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsListByResourceGroupSample.ts
[connectedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsListBySubscriptionSample.ts
[connectedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsStoragesCreateOrUpdateSample.ts
[connectedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsStoragesDeleteSample.ts
[connectedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsStoragesGetSample.ts
[connectedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsStoragesListSample.ts
[connectedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/connectedEnvironmentsUpdateSample.ts
[containerappsauthconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsAuthConfigsCreateOrUpdateSample.ts
[containerappsauthconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsAuthConfigsDeleteSample.ts
[containerappsauthconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsAuthConfigsGetSample.ts
[containerappsauthconfigslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsAuthConfigsListByContainerAppSample.ts
[containerappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsCreateOrUpdateSample.ts
[containerappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDeleteSample.ts
[containerappsdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDiagnosticsGetDetectorSample.ts
[containerappsdiagnosticsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDiagnosticsGetRevisionSample.ts
[containerappsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDiagnosticsGetRootSample.ts
[containerappsdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDiagnosticsListDetectorsSample.ts
[containerappsdiagnosticslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsDiagnosticsListRevisionsSample.ts
[containerappsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsGetAuthTokenSample.ts
[containerappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsGetSample.ts
[containerappslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsListByResourceGroupSample.ts
[containerappslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsListBySubscriptionSample.ts
[containerappslistcustomhostnameanalysissample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsListCustomHostNameAnalysisSample.ts
[containerappslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsListSecretsSample.ts
[containerappsrevisionreplicasgetreplicasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionReplicasGetReplicaSample.ts
[containerappsrevisionreplicaslistreplicassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionReplicasListReplicasSample.ts
[containerappsrevisionsactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionsActivateRevisionSample.ts
[containerappsrevisionsdeactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionsDeactivateRevisionSample.ts
[containerappsrevisionsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionsGetRevisionSample.ts
[containerappsrevisionslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionsListRevisionsSample.ts
[containerappsrevisionsrestartrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsRevisionsRestartRevisionSample.ts
[containerappssessionpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsCreateOrUpdateSample.ts
[containerappssessionpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsDeleteSample.ts
[containerappssessionpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsGetSample.ts
[containerappssessionpoolslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsListByResourceGroupSample.ts
[containerappssessionpoolslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsListBySubscriptionSample.ts
[containerappssessionpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSessionPoolsUpdateSample.ts
[containerappssourcecontrolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSourceControlsCreateOrUpdateSample.ts
[containerappssourcecontrolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSourceControlsDeleteSample.ts
[containerappssourcecontrolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSourceControlsGetSample.ts
[containerappssourcecontrolslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsSourceControlsListByContainerAppSample.ts
[containerappsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsStartSample.ts
[containerappsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsStopSample.ts
[containerappsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/containerAppsUpdateSample.ts
[daprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/daprComponentsCreateOrUpdateSample.ts
[daprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/daprComponentsDeleteSample.ts
[daprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/daprComponentsGetSample.ts
[daprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/daprComponentsListSample.ts
[daprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/daprComponentsListSecretsSample.ts
[getcustomdomainverificationidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/getCustomDomainVerificationIdSample.ts
[javacomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/javaComponentsCreateOrUpdateSample.ts
[javacomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/javaComponentsDeleteSample.ts
[javacomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/javaComponentsGetSample.ts
[javacomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/javaComponentsListSample.ts
[javacomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/javaComponentsUpdateSample.ts
[jobexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobExecutionSample.ts
[jobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsCreateOrUpdateSample.ts
[jobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsDeleteSample.ts
[jobsexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsExecutionsListSample.ts
[jobsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsGetDetectorSample.ts
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsGetSample.ts
[jobslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsListByResourceGroupSample.ts
[jobslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsListBySubscriptionSample.ts
[jobslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsListDetectorsSample.ts
[jobslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsListSecretsSample.ts
[jobsproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsProxyGetSample.ts
[jobsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsStartSample.ts
[jobsstopexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsStopExecutionSample.ts
[jobsstopmultipleexecutionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsStopMultipleExecutionsSample.ts
[jobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/jobsUpdateSample.ts
[managedcertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedCertificatesCreateOrUpdateSample.ts
[managedcertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedCertificatesDeleteSample.ts
[managedcertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedCertificatesGetSample.ts
[managedcertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedCertificatesListSample.ts
[managedcertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedCertificatesUpdateSample.ts
[managedenvironmentdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentDiagnosticsGetDetectorSample.ts
[managedenvironmentdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentDiagnosticsListDetectorsSample.ts
[managedenvironmentusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentUsagesListSample.ts
[managedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsCreateOrUpdateSample.ts
[managedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsDeleteSample.ts
[managedenvironmentsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsDiagnosticsGetRootSample.ts
[managedenvironmentsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsGetAuthTokenSample.ts
[managedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsGetSample.ts
[managedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsListByResourceGroupSample.ts
[managedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsListBySubscriptionSample.ts
[managedenvironmentslistworkloadprofilestatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsListWorkloadProfileStatesSample.ts
[managedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsStoragesCreateOrUpdateSample.ts
[managedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsStoragesDeleteSample.ts
[managedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsStoragesGetSample.ts
[managedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsStoragesListSample.ts
[managedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/managedEnvironmentsUpdateSample.ts
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/namespacesCheckNameAvailabilitySample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/operationsListSample.ts
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v2/typescript/src/usagesListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-appcontainers?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/appcontainers/arm-appcontainers/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
